[package]

name = "grin_secp256k1zkp"
version = "0.7.6"
authors = [ "Grin Developers <mimblewimble@lists.launchpad.net>",
						"Dawid Ciężarkiewicz <dpc@ucore.info>",
            "Andrew Poelstra <apoelstra@wpsoftware.net>" ]
license = "CC0-1.0"
homepage = "https://grin-tech.org"
repository = "https://github.com/mimblewimble/rust-secp256k1/"
description = "Grin's fork with Zero-Knowledge extensions of Rust bindings for Pieter Wuille's `libsecp256k1` library. Implements ECDSA for the SECG elliptic curve group secp256k1 and related utilities."
keywords = [ "crypto", "secp256k1", "grin", "bitcoin", "zero-knowledge" ]
readme = "README.md"
edition = "2018"

build = "build.rs"
[build-dependencies]
cc = "1.0"

[lib]
name = "secp256k1zkp"
path = "src/lib.rs"

[features]
unstable = []
default = []
bullet-proof-sizing = []
dev = ["clippy"]

[dependencies]
arrayvec = "0.3"
clippy = {version = "0.0", optional = true}
rand = "0.5"
libc = "0.2"
rustc-serialize = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zeroize = "0.8"

[dev-dependencies]
chrono = "0.4.5"
rand_core = "0.2"
